<resources>
    <string name="app_name">FireBase</string>
    <string name="action_settings">Settings</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="enter_DNI">DNI</string>
    <string name="enter_Name">Nombres</string>
    <string name="enter_LastName">Apellidos</string>
    <string name="enter_Email">Correo</string>
    <string name="enter_Password">Contraseña</string>
    <string name="load_Picture">Subir Una Foto</string>
    <string name="signIn">Registrar Usuario</string>
    <string name="connect">LogIn</string>
    <string name="LogOut">SALIR</string>
    <string name="welcome">BIENVENIDO</string>
</resources>
